--- a/src/index.html
+++ b/src/index.html
@@ -152,6 +152,14 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <div class="col-sm-2"></div>
+                            <div class="col-sm-10 checkbox">
+                                <label>
+									<button type="button" value="save" id="save-mnemonic">Save Mnemonic to file</button>
+                                </label>
+                            </div>
+                        </div>      
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">Mnemonic Language</label>
                             <div class="col-sm-10 languages">
                                 <div class="form-control no-border">
